// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Spartacus User schematics: ng-add User Profile feature eager loading should import appropriate modules 1`] = `
"import { NgModule } from '@angular/core';
import { I18nConfig, provideConfig } from "@spartacus/core";
import { UserProfileModule } from "@spartacus/user/profile";
import { userProfileTranslationChunksConfig, userProfileTranslationsEn } from "@spartacus/user/profile/assets";
import { UserProfileRootModule } from "@spartacus/user/profile/root";

@NgModule({
  declarations: [],
  imports: [
    UserProfileRootModule,
    UserProfileModule
  ],
  providers: [provideConfig(<I18nConfig>{
    i18n: {
      resources: { en: userProfileTranslationsEn },
      chunks: userProfileTranslationChunksConfig,
    },
  })]
})
export class UserFeatureModule { }
"
`;

exports[`Spartacus User schematics: ng-add User Profile feature general setup should NOT install the required feature dependencies 1`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, I18nConfig, provideConfig } from "@spartacus/core";
import { userProfileTranslationChunksConfig, userProfileTranslationsEn } from "@spartacus/user/profile/assets";
import { USER_PROFILE_FEATURE, UserProfileRootModule } from "@spartacus/user/profile/root";

@NgModule({
  declarations: [],
  imports: [
    UserProfileRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [USER_PROFILE_FEATURE]: {
        module: () =>
          import('@spartacus/user/profile').then((m) => m.UserProfileModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: { en: userProfileTranslationsEn },
      chunks: userProfileTranslationChunksConfig,
    },
  })
  ]
})
export class UserFeatureModule { }
"
`;

exports[`Spartacus User schematics: ng-add User Profile feature general setup should add the feature using the lazy loading syntax 1`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, I18nConfig, provideConfig } from "@spartacus/core";
import { userProfileTranslationChunksConfig, userProfileTranslationsEn } from "@spartacus/user/profile/assets";
import { USER_PROFILE_FEATURE, UserProfileRootModule } from "@spartacus/user/profile/root";

@NgModule({
  declarations: [],
  imports: [
    UserProfileRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [USER_PROFILE_FEATURE]: {
        module: () =>
          import('@spartacus/user/profile').then((m) => m.UserProfileModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: { en: userProfileTranslationsEn },
      chunks: userProfileTranslationChunksConfig,
    },
  })
  ]
})
export class UserFeatureModule { }
"
`;

exports[`Spartacus User schematics: ng-add User Profile feature general setup styling should create a proper scss file 1`] = `
"@import "../../styles-config";
@import "@spartacus/user";
"
`;

exports[`Spartacus User schematics: ng-add User Profile feature general setup styling should update angular.json 1`] = `
"{
  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
  "version": 1,
  "newProjectRoot": "",
  "projects": {
    "schematics-test": {
      "projectType": "application",
      "schematics": {
        "@schematics/angular:component": {
          "style": "scss",
          "standalone": false,
          "type": "component",
          "addTypeToClassName": false
        },
        "@schematics/angular:directive": {
          "standalone": false,
          "type": "directive",
          "addTypeToClassName": false
        },
        "@schematics/angular:pipe": {
          "standalone": false,
          "typeSeparator": "."
        },
        "@schematics/angular:service": {
          "type": "service",
          "addTypeToClassName": false
        },
        "@schematics/angular:guard": {
          "typeSeparator": "."
        },
        "@schematics/angular:interceptor": {
          "typeSeparator": "."
        },
        "@schematics/angular:module": {
          "typeSeparator": "."
        },
        "@schematics/angular:resolver": {
          "typeSeparator": "."
        }
      },
      "root": "",
      "sourceRoot": "src",
      "prefix": "app",
      "architect": {
        "build": {
          "builder": "@angular/build:application",
          "options": {
            "browser": "src/main.ts",
            "polyfills": [
              "zone.js"
            ],
            "tsConfig": "tsconfig.app.json",
            "inlineStyleLanguage": "scss",
            "assets": [
              {
                "glob": "**/*",
                "input": "public"
              }
            ],
            "styles": [
              "src/styles.scss",
              "src/styles/spartacus/user.scss"
            ],
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ],
              "sass": {
                "silenceDeprecations": [
                  "import"
                ]
              }
            }
          },
          "configurations": {
            "production": {
              "budgets": [
                {
                  "type": "initial",
                  "maximumWarning": "500kB",
                  "maximumError": "3.5mb"
                },
                {
                  "type": "anyComponentStyle",
                  "maximumWarning": "4kB",
                  "maximumError": "8kB"
                }
              ],
              "outputHashing": "all"
            },
            "development": {
              "optimization": false,
              "extractLicenses": false,
              "sourceMap": true
            }
          },
          "defaultConfiguration": "production"
        },
        "serve": {
          "builder": "@angular/build:dev-server",
          "configurations": {
            "production": {
              "buildTarget": "schematics-test:build:production"
            },
            "development": {
              "buildTarget": "schematics-test:build:development"
            }
          },
          "defaultConfiguration": "development"
        },
        "test": {
          "builder": "@angular/build:unit-test",
          "options": {
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ]
            },
            "styles": [
              "src/styles/spartacus/user.scss"
            ]
          }
        }
      }
    }
  }
}"
`;

exports[`Spartacus User schematics: ng-add User-Account feature eager loading should import appropriate modules 1`] = `
"import { NgModule } from '@angular/core';
import { I18nConfig, provideConfig } from "@spartacus/core";
import { UserAccountModule } from "@spartacus/user/account";
import { userAccountTranslationChunksConfig, userAccountTranslationsEn } from "@spartacus/user/account/assets";
import { UserAccountRootModule } from "@spartacus/user/account/root";

@NgModule({
  declarations: [],
  imports: [
    UserAccountRootModule,
    UserAccountModule
  ],
  providers: [provideConfig(<I18nConfig>{
    i18n: {
      resources: { en: userAccountTranslationsEn },
      chunks: userAccountTranslationChunksConfig,
    },
  })]
})
export class UserFeatureModule { }
"
`;

exports[`Spartacus User schematics: ng-add User-Account feature general setup should add the feature using the lazy loading syntax 1`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, I18nConfig, provideConfig } from "@spartacus/core";
import { userAccountTranslationChunksConfig, userAccountTranslationsEn } from "@spartacus/user/account/assets";
import { USER_ACCOUNT_FEATURE, UserAccountRootModule } from "@spartacus/user/account/root";

@NgModule({
  declarations: [],
  imports: [
    UserAccountRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [USER_ACCOUNT_FEATURE]: {
        module: () =>
          import('@spartacus/user/account').then((m) => m.UserAccountModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: { en: userAccountTranslationsEn },
      chunks: userAccountTranslationChunksConfig,
    },
  })
  ]
})
export class UserFeatureModule { }
"
`;

exports[`Spartacus User schematics: ng-add User-Account feature general setup styling should create a proper scss file 1`] = `
"@import "../../styles-config";
@import "@spartacus/user";
"
`;

exports[`Spartacus User schematics: ng-add User-Account feature general setup styling should update angular.json 1`] = `
"{
  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
  "version": 1,
  "newProjectRoot": "",
  "projects": {
    "schematics-test": {
      "projectType": "application",
      "schematics": {
        "@schematics/angular:component": {
          "style": "scss",
          "standalone": false,
          "type": "component",
          "addTypeToClassName": false
        },
        "@schematics/angular:directive": {
          "standalone": false,
          "type": "directive",
          "addTypeToClassName": false
        },
        "@schematics/angular:pipe": {
          "standalone": false,
          "typeSeparator": "."
        },
        "@schematics/angular:service": {
          "type": "service",
          "addTypeToClassName": false
        },
        "@schematics/angular:guard": {
          "typeSeparator": "."
        },
        "@schematics/angular:interceptor": {
          "typeSeparator": "."
        },
        "@schematics/angular:module": {
          "typeSeparator": "."
        },
        "@schematics/angular:resolver": {
          "typeSeparator": "."
        }
      },
      "root": "",
      "sourceRoot": "src",
      "prefix": "app",
      "architect": {
        "build": {
          "builder": "@angular/build:application",
          "options": {
            "browser": "src/main.ts",
            "polyfills": [
              "zone.js"
            ],
            "tsConfig": "tsconfig.app.json",
            "inlineStyleLanguage": "scss",
            "assets": [
              {
                "glob": "**/*",
                "input": "public"
              }
            ],
            "styles": [
              "src/styles.scss",
              "src/styles/spartacus/user.scss"
            ],
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ],
              "sass": {
                "silenceDeprecations": [
                  "import"
                ]
              }
            }
          },
          "configurations": {
            "production": {
              "budgets": [
                {
                  "type": "initial",
                  "maximumWarning": "500kB",
                  "maximumError": "3.5mb"
                },
                {
                  "type": "anyComponentStyle",
                  "maximumWarning": "4kB",
                  "maximumError": "8kB"
                }
              ],
              "outputHashing": "all"
            },
            "development": {
              "optimization": false,
              "extractLicenses": false,
              "sourceMap": true
            }
          },
          "defaultConfiguration": "production"
        },
        "serve": {
          "builder": "@angular/build:dev-server",
          "configurations": {
            "production": {
              "buildTarget": "schematics-test:build:production"
            },
            "development": {
              "buildTarget": "schematics-test:build:development"
            }
          },
          "defaultConfiguration": "development"
        },
        "test": {
          "builder": "@angular/build:unit-test",
          "options": {
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ]
            },
            "styles": [
              "src/styles/spartacus/user.scss"
            ]
          }
        }
      }
    }
  }
}"
`;
